--- a/Pipfile
+++ b/Pipfile
@@ -11,8 +11,7 @@ scikit-learn = "*"
 matplotlib = "*"
 seaborn = "*"
 pyyaml = "*"
+argparse = "*"
 
 [dev-packages]
 
-[requires]
-python_version = "3.10"
